# AI-Projects

./: .gitignore  LICENSE  README.md  config.py  implementation_plan.txt  main.py  pyproject.toml  usage_example.txt
agent/: __init__.py  history.py  loop.py
display/: __init__.py  console.py
mcp_client/: __init__.py  client.py  server_configs.py  tool_adapter.py
mcp_servers/rag_server/: __init__.py  indexer.py  retriever.py  server.py
mcp_servers/rag_server/chroma_db/: chroma.sqlite3
providers/: __init__.py  factory.py
tests/: test_agent.py  test_display.py  test_mcp.py  test_providers.py  test_rag.py
